--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
         </div>
     </section>
 
+    <section class="dream-big">
+
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="Picture of Jhankar bro">
+        </div>
+
+        <div class="half-width">
+
+            <h3>Become a Web Developer</h3>
+            <p class="dream-big-p">I already learned the basic HTML and CSS. I can build any simple website. I can even
+                teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="hire-button" target="blank" href="https://www.facebook.com/aqib.tarif">Download Resume</a>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
